--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
   <body>
     <div id="root"></div>
 
-    <script src="/build/bundle.js"></script>
+    <script src="/mjbe-resume/build/bundle.js"></script>
   </body>
   
 </html>
